SERVER-55267 Fix dateAdd to use the new timelib for DST correction.